@@ -6,6 +6,7 @@ Pulse-4.5.1
  - In ViewDataDvlViewModel, fixed Display All data.
  - Fixed Display All.
  - Moved the copyright information to the text file Copyright.txt.
+ - Skip the Compass Calibration in the wizard.  Added the compass calibration as a button in the Configuration screen.
 
 Pulse-4.5.0
  - Fix a bug with importing and playing back data, where data was missing.
